--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
         "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
     },
     "dependencies": {
-        "express": "^4.21.2",
-        "helmet": "^8.0.0"
+        "express": "5.1.0",
+        "helmet": "8.1.0"
     },
     "devDependencies": {
-        "@types/express": "^5.0.0",
-        "@types/node": "^22.10.5",
-        "@typescript-eslint/eslint-plugin": "^8.20.0",
-        "@typescript-eslint/parser": "^8.20.0",
-        "eslint": "^8.57.1",
-        "tsx": "^4.19.2",
-        "typescript": "^5.7.3"
+        "@types/express": "5.0.3",
+        "@types/node": "22.18.12",
+        "@typescript-eslint/eslint-plugin": "8.46.2",
+        "@typescript-eslint/parser": "8.46.2",
+        "eslint": "8.57.1",
+        "tsx": "4.20.6",
+        "typescript": "5.9.3"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "useTabs": false
     }
 }
-
