feat(tests): DJ-28 set up full support for absolute imports
This commit enhances the configuration of TypeScript and Jest to allow
full support for absolute imports within the project. The changes include
updating the Jest module name mapper to recognize absolute imports from
the tests folder as well. This adjustment aligns with the goal of
streamlining imports and improving code readability.

Additionally, a new TypeScript configuration file `tsconfig.build.json`
has been introduced to facilitate the build process, specifically by
excluding the tests directory in the build context. This change optimizes
the output directory and ensures only production-related files are built.

Moreover, adjustments to the `package.json` scripts allow the build command
to run `tsc-alias`, which replaces path aliases, ensuring they match with
the actual paths in the built files. These modifications collectively
enhance the development experience, reduce friction in managing imports,
and prepare the codebase for easier scalability in the future.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "license": "ISC",
     "scripts": {
         "dev": "tsx watch src/main/server.ts",
-        "build": "tsc",
+        "build": "tsc --project tsconfig.build.json && tsc-alias",
         "start": "node dist/main/server.js",
         "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
         "test": "cross-env NODE_ENV=test jest --runInBand",
@@ -33,6 +33,7 @@
         "jest-junit": "16.0.0",
         "ts-jest": "29.4.5",
         "ts-node": "10.9.2",
+        "tsc-alias": "^1.8.16",
         "tsx": "4.20.6",
         "typescript": "5.9.3"
     },
