--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "dev": "tsx watch src/main/server.ts",
         "build": "tsc --project tsconfig.build.json && tsc-alias",
         "start": "node dist/main/server.js",
-        "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
+        "format": "biome format --write .",
+        "lint": "biome check .",
+        "lint:staged": "biome check --apply",
+        "prepare": "husky",
         "test": "cross-env NODE_ENV=test jest --runInBand",
         "test:watch": "cross-env NODE_ENV=test jest --watch",
         "test:cov": "cross-env NODE_ENV=test jest --runInBand --coverage",
@@ -22,23 +25,24 @@
         "helmet": "8.1.0"
     },
     "devDependencies": {
+        "@biomejs/biome": "2.3.0",
         "@types/express": "5.0.3",
         "@types/jest": "30.0.0",
         "@types/node": "22.18.12",
-        "@typescript-eslint/eslint-plugin": "8.46.2",
-        "@typescript-eslint/parser": "8.46.2",
         "cross-env": "10.1.0",
-        "eslint": "8.57.1",
+        "husky": "9.1.7",
         "jest": "30.2.0",
         "jest-junit": "16.0.0",
+        "lint-staged": "16.2.6",
         "ts-jest": "29.4.5",
         "ts-node": "10.9.2",
-        "tsc-alias": "^1.8.16",
+        "tsc-alias": "1.8.16",
         "tsx": "4.20.6",
         "typescript": "5.9.3"
     },
-    "prettier": {
-        "tabWidth": 4,
-        "useTabs": false
+    "lint-staged": {
+        "*.{ts,tsx}": [
+            "biome check --apply"
+        ]
     }
 }
