--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start": "node dist/main/server.js",
         "format": "biome format --write .",
         "lint": "biome check .",
-        "lint:staged": "biome check --apply",
+        "lint:staged": "biome check --write",
         "prepare": "husky",
         "test": "cross-env NODE_ENV=test jest --runInBand",
         "test:watch": "cross-env NODE_ENV=test jest --watch",
@@ -42,7 +42,7 @@
     },
     "lint-staged": {
         "*.{ts,tsx}": [
-            "biome check --apply"
+            "biome check --write"
         ]
     }
 }
