--- a/package.json
+++ b/package.json
@@ -18,21 +18,31 @@
         "test": "cross-env NODE_ENV=test jest --runInBand",
         "test:watch": "cross-env NODE_ENV=test jest --watch",
         "test:cov": "cross-env NODE_ENV=test jest --runInBand --coverage",
-        "test:ci": "cross-env NODE_ENV=test jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit"
+        "test:ci": "cross-env NODE_ENV=test jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
+        "drizzle-orm": "0.44.7",
         "express": "5.1.0",
-        "helmet": "8.1.0"
+        "helmet": "8.1.0",
+        "pg": "8.16.3"
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.0",
+        "@jest-mock/express": "3.0.0",
         "@types/express": "5.0.3",
         "@types/jest": "30.0.0",
         "@types/node": "22.18.12",
+        "@types/pg": "^8.15.5",
         "cross-env": "10.1.0",
+        "drizzle-kit": "^0.31.5",
         "husky": "9.1.7",
         "jest": "30.2.0",
         "jest-junit": "16.0.0",
+        "jest-mock-extended": "4.0.0",
         "lint-staged": "16.2.6",
         "ts-jest": "29.4.5",
         "ts-node": "10.9.2",
