--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "drizzle-orm": "0.44.7",
         "express": "5.1.0",
         "helmet": "8.1.0",
-        "pg": "8.16.3"
+        "pg": "8.16.3",
+        "swagger-ui-express": "5.0.1",
+        "yamljs": "0.3.0"
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.0",
@@ -37,6 +39,8 @@
         "@types/jest": "30.0.0",
         "@types/node": "22.18.12",
         "@types/pg": "^8.15.5",
+        "@types/swagger-ui-express": "4.1.6",
+        "@types/yamljs": "0.2.34",
         "cross-env": "10.1.0",
         "drizzle-kit": "^0.31.5",
         "husky": "9.1.7",
