feat(biome): DJ-30 Add JSON and globals to configuration
This commit enhances the biome configuration by updating the
files' includes to exclude JSON files. This change was necessary
to prevent any unintended inclusion of configuration files that
could cause conflicts during the build or testing processes.

Additionally, I’ve added a globals section in the formatter
configuration which specifies common testing globals used in
Jest. This ensures that our linter recognizes these globals and
does not raise warnings or errors when they are utilized in the
codebase.

These updates improve both the maintainability of our project
and developer experience by streamlining linting processes and
ensuring only necessary files are included.

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["**", "!**/dist", "!**/coverage", "!**/node_modules", "!**/*.js"]
+        "includes": [
+            "**",
+            "!**/dist",
+            "!**/coverage",
+            "!**/node_modules",
+            "!**/*.js",
+            "!**/*.json"
+        ]
     },
     "formatter": {
         "enabled": true,
@@ -89,6 +96,28 @@
             "quoteStyle": "double",
             "semicolons": "always",
             "trailingCommas": "all"
+        },
+        "globals": [
+            "jest",
+            "describe",
+            "it",
+            "expect",
+            "beforeAll",
+            "beforeEach",
+            "afterAll",
+            "afterEach"
+        ]
+    },
+    "overrides": [
+        {
+            "includes": ["src/domain/contracts/**/*.ts"],
+            "linter": {
+                "rules": {
+                    "style": {
+                        "noNamespace": "off"
+                    }
+                }
+            }
         }
-    }
+    ]
 }
