feat(tests): DJ-30 add unit and integration test scripts
This commit adds new test scripts to the package.json to enhance
our testing capabilities for the project. The newly introduced
commands are:

- `test:unit`: Runs all unit tests with a specific pattern for
  files ending in .spec.ts.
- `test:integration`: Executes the integration tests using a
  dedicated Jest configuration file.
- `test:all`: A convenience script that runs both unit and
  integration tests sequentially.

The motivation behind these changes is to improve our testing
structure by allowing developers to run tests more effectively.
With the introduction of separate unit and integration test commands,
we can focus on different testing scopes independently, which will
help maintain code quality and facilitate easier debugging.
By adding the `test:all` command, we simplify the process of
running the complete test suite in one command, ensuring thorough
testing coverage before deployment.

Additionally, we have updated the dependencies to support the new
testing requirements, including adding type definitions for
`supertest` and updating the `supertest` package itself. This will
help in writing reliable integration tests for our API endpoints.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "lint:staged": "biome check --write",
         "prepare": "husky",
         "test": "cross-env NODE_ENV=test jest --runInBand",
+        "test:unit": "cross-env NODE_ENV=test jest --runInBand --testPathPatterns=\\.spec\\.ts$",
+        "test:integration": "cross-env NODE_ENV=test jest --runInBand --config jest.integration.config.ts",
+        "test:all": "npm run test:unit && npm run test:integration",
         "test:watch": "cross-env NODE_ENV=test jest --watch",
         "test:cov": "cross-env NODE_ENV=test jest --runInBand --coverage",
         "test:ci": "cross-env NODE_ENV=test jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
@@ -39,6 +42,7 @@
         "@types/jest": "30.0.0",
         "@types/node": "22.18.12",
         "@types/pg": "^8.15.5",
+        "@types/supertest": "6.0.2",
         "@types/swagger-ui-express": "4.1.6",
         "@types/yamljs": "0.2.34",
         "cross-env": "10.1.0",
@@ -48,6 +52,7 @@
         "jest-junit": "16.0.0",
         "jest-mock-extended": "4.0.0",
         "lint-staged": "16.2.6",
+        "supertest": "7.0.0",
         "ts-jest": "29.4.5",
         "ts-node": "10.9.2",
         "tsc-alias": "1.8.16",
